# rincli

./: .gitignore  Cargo.toml  SKILL.md  package.json  pnpm-workspace.yaml  setup.py
crates/rincli/: Cargo.toml
crates/rincli/src/: cli.rs  errors.rs  main.rs
crates/rincli/src/commands/: config.rs  doctor.rs  install.rs  logs.rs  mod.rs  models.rs  ps.rs  run.rs  runtime.rs  search.rs  stop.rs
crates/rincli/src/config/: mod.rs
crates/rincli/src/download/: mod.rs
crates/rincli/src/hardware/: mod.rs
crates/rincli/src/registry/: bundled.rs  hf.rs  mod.rs  schema.rs  scoring.rs
crates/rincli/src/runtime/: mod.rs
docs/: DEV_SPEC.md
npm/: package.json
registry/: registry.json
scripts/: harness.py
